--- a/.github/workflows/level_publish.yml
+++ b/.github/workflows/level_publish.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Decrypt assets
         run: |
           if [ -z "${{ secrets.ASSETS_KEY }}" ]; then
-            echo "ASSETS_KEY secret is not set. Please add it to the repository secrets. See http://localhost:40177/reference/asset-management/#deploying-your-level" >&2
+            echo "ASSETS_KEY secret is not set. Please add it to the repository secrets. See https://docs.getlost.gg/latest/reference/asset-management/#deploying-your-level" >&2
             exit 1
           fi
           git-crypt unlock <(echo "${{ secrets.ASSETS_KEY }}" | base64 -d)
